atualização do campo "senha"

--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 DB-HOST="localhost"
 DB_USER="root"
-DB_PASSWORD="@D5d52811" #ALTERAR PARA A SUA SENHA
+DB_PASSWORD="senha" #ALTERAR PARA A SUA SENHA DO MYSQL
 DB_NAME="dadosestufa" 
