--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 DB-HOST="localhost"
-DB_USER="root"
+DB_USER="Usuário" #ALTERAR O NOME DE USUÁRIO DO MYSQL (Não pode ser root)
 DB_PASSWORD="senha" #ALTERAR PARA A SUA SENHA DO MYSQL
 DB_NAME="dadosestufa" 
